NEWS since Mercury release 0.11.0:
----------------------------------

HIGHLIGHTS
==========

Changes to the Mercury language:
* Infix `.' is now accepted as a module name separator.
* Field access syntax can now be used at the top-level in func and mode
  declarations and in the head of a clause for a user-defined field access
  function.
* We now support impure higher-order code.
* We now allow user-defined comparison routines.

Changes to the Mercury compiler:
* Better support for incremental program development:
  there's two new compiler options, `--allow-stubs' and `--no-warn-stubs',
  to support execution of incomplete programs.
* It's now easier to use shared libraries on Linux/x86 systems
  with `mmc --make'.

Changes to the Mercury standard library:
* We've added a new module, cord, for sequences with O(1) consing and
  concatenation.
* Several new functions have been added to the string module, namely
  elem/2, unsafe_elem/2, chomp/1, lstrip/1, lstrip/2, rstrip/1, rstrip/2,
  strip/1, prefix_length/2, and suffix_length/2.

Portability improvements:
* Nothing yet.

Changes to the Mercury debugger:
* Users can now limit the output from stack traces.

Changes to the compiler back-ends:
* The .NET CLR back-end now bootstraps.

Numerous minor improvements to the Mercury standard library.

DETAILED LISTING
================

Changes to the Mercury language:

* We now allow user-defined comparison routines, using the syntax
  :- type t ---> t where equality is unify_t, comparison is compare_t.

  See the "User-defined equality and comparison" chapter of the
  Mercury Language Reference Manual for details.

* Infix `.' is now accepted as a module name separator.  Hence it is
  now possible to write io.write_string and list.member to mean the
  same thing as io__write_string and list__member, for instance.  This
  has required changing the associativity of `.' from xfy to yfx and
  from precedence 600 to 10.
