@@ -16,6 +16,8 @@ MULTIMODULE_PROGS= \
 	aditi_update_errors \
 	aditi_update_mode_errors \
 	duplicate_instance_2 \
+	exported_unify \
+	exported_unify3 \
 	ho_default_func_2.sub \
 	import_in_parent \
 	imported_mode \
